# Sparkedge-ERCOT

./: .env.example  .gitignore  BUILD_NOTES.md  README.md  pyproject.toml  requirements.txt  start.sh
.streamlit/: config.toml
sparkedge_ercot/: __init__.py  app.py  cli.py  compute.py  config.py  data.py  ssl_compat.py  storage.py
